crates/squealy/tests/compile_fail/case_nonnull_branches_are_not_nullable.stderr
error[E0277]: the trait bound `i32: NullableExpr` is not satisfied
  --> tests/compile_fail/case_nonnull_branches_are_not_nullable.rs:25:14
   |
25 |             .is_null()
   |              ^^^^^^^ the trait `NullableExpr` is not implemented for `i32`
   |
help: the following other types implement trait `NullableExpr`
  --> src/expr.rs
   |
   | impl<K> NullableExpr for Nullable<K> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<K>`
...
   | impl<K> NullableExpr for ScalarNullable<K> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ScalarNullable<K>`
note: required by a bound in `Expr::<'scope, K, Ast>::is_null`
  --> src/expr.rs
   |
   |     K: ExprKind + NullableExpr,
   |                   ^^^^^^^^^^^^ required by this bound in `Expr::<'scope, K, Ast>::is_null`
...
   |     pub fn is_null(&self) -> Predicate<'scope, IsNullPredicate<K>, NullCheckPredicateAst<Ast>> {
   |            ------- required by a bound in this associated function
